// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetailsInfo should render correctly for a confirmed transaction 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <Divider />
  <OutputInfo
    receivingAddress="receivingAddress"
    transactionDetails={
      Transaction {
        "ins": [
          {
            "hash": {
              "data": [
                33,
                202,
                70,
                220,
                213,
                105,
                233,
                30,
                251,
                143,
                137,
                245,
                202,
                244,
                79,
                184,
                211,
                5,
                214,
                178,
                126,
                218,
                87,
                212,
                226,
                192,
                204,
                68,
                253,
                54,
                42,
                4,
              ],
              "type": "Buffer",
            },
            "index": 16,
            "script": {
              "data": [],
              "type": "Buffer",
            },
            "sequence": 4261412863,
            "witness": [
              {
                "data": [
                  145,
                  125,
                  216,
                  186,
                  69,
                  210,
                  38,
                  176,
                  24,
                  69,
                  1,
                  163,
                  224,
                  74,
                  76,
                  116,
                  149,
                  107,
                  122,
                  81,
                  181,
                  234,
                  16,
                  54,
                  207,
                  64,
                  68,
                  195,
                  143,
                  193,
                  209,
                  65,
                  44,
                  102,
                  122,
                  239,
                  162,
                  184,
                  83,
                  67,
                  158,
                  82,
                  79,
                  241,
                  147,
                  102,
                  151,
                  126,
                  171,
                  215,
                  39,
                  35,
                  103,
                  165,
                  26,
                  143,
                  74,
                  140,
                  111,
                  106,
                  125,
                  107,
                  73,
                  172,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  32,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                  172,
                  0,
                  99,
                  3,
                  111,
                  114,
                  100,
                  1,
                  1,
                  24,
                  116,
                  101,
                  120,
                  116,
                  47,
                  112,
                  108,
                  97,
                  105,
                  110,
                  59,
                  99,
                  104,
                  97,
                  114,
                  115,
                  101,
                  116,
                  61,
                  117,
                  116,
                  102,
                  45,
                  56,
                  0,
                  58,
                  123,
                  34,
                  112,
                  34,
                  58,
                  34,
                  98,
                  114,
                  99,
                  45,
                  50,
                  48,
                  34,
                  44,
                  34,
                  111,
                  112,
                  34,
                  58,
                  34,
                  109,
                  105,
                  110,
                  116,
                  34,
                  44,
                  34,
                  116,
                  105,
                  99,
                  107,
                  34,
                  58,
                  34,
                  115,
                  97,
                  116,
                  115,
                  34,
                  44,
                  34,
                  97,
                  109,
                  116,
                  34,
                  58,
                  34,
                  49,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  34,
                  125,
                  104,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  192,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                ],
                "type": "Buffer",
              },
            ],
          },
        ],
        "locktime": 0,
        "outs": [
          {
            "script": {
              "data": [
                0,
                20,
                240,
                1,
                196,
                156,
                110,
                50,
                157,
                109,
                236,
                42,
                137,
                34,
                206,
                68,
                0,
                12,
                70,
                224,
                131,
                216,
              ],
              "type": "Buffer",
            },
            "value": 330,
          },
        ],
        "version": 2,
      }
    }
    transactionSummary={
      {
        "amount": 1540,
        "confirmed": true,
        "date": 2022-09-14T16:14:02.835Z,
        "height": 1,
        "id": "053f320d8b9b77c521e8d9e8e7d90692e9c51a38c3d11010069e66b37b5f53d7",
        "offerData": [
          {
            "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
            "amount": 900,
            "contractId": undefined,
            "currency": undefined,
            "offerId": "123",
            "price": undefined,
          },
        ],
        "type": "WITHDRAWAL",
      }
    }
  />
  <Divider />
  <ConfirmationSummaryItem
    confirmed={true}
  />
  <React.Fragment>
    <CopyableSummaryItem
      text="1"
      title="block"
    />
    <CopyableSummaryItem
      text="14/09/2022"
      title="time"
    />
  </React.Fragment>
  <Divider />
  <Bubble
    color="primary"
    ghost={true}
    iconId="externalLink"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    view in explorer
  </Bubble>
</View>
`;

exports[`TransactionDetailsInfo should render correctly for a deposit transaction 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <AddressLabelInput
    address="receivingAddress"
    fallback="receiving...dress"
  />
  <Divider />
  <OutputInfo
    receivingAddress="receivingAddress"
    transactionDetails={
      Transaction {
        "ins": [
          {
            "hash": {
              "data": [
                33,
                202,
                70,
                220,
                213,
                105,
                233,
                30,
                251,
                143,
                137,
                245,
                202,
                244,
                79,
                184,
                211,
                5,
                214,
                178,
                126,
                218,
                87,
                212,
                226,
                192,
                204,
                68,
                253,
                54,
                42,
                4,
              ],
              "type": "Buffer",
            },
            "index": 16,
            "script": {
              "data": [],
              "type": "Buffer",
            },
            "sequence": 4261412863,
            "witness": [
              {
                "data": [
                  145,
                  125,
                  216,
                  186,
                  69,
                  210,
                  38,
                  176,
                  24,
                  69,
                  1,
                  163,
                  224,
                  74,
                  76,
                  116,
                  149,
                  107,
                  122,
                  81,
                  181,
                  234,
                  16,
                  54,
                  207,
                  64,
                  68,
                  195,
                  143,
                  193,
                  209,
                  65,
                  44,
                  102,
                  122,
                  239,
                  162,
                  184,
                  83,
                  67,
                  158,
                  82,
                  79,
                  241,
                  147,
                  102,
                  151,
                  126,
                  171,
                  215,
                  39,
                  35,
                  103,
                  165,
                  26,
                  143,
                  74,
                  140,
                  111,
                  106,
                  125,
                  107,
                  73,
                  172,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  32,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                  172,
                  0,
                  99,
                  3,
                  111,
                  114,
                  100,
                  1,
                  1,
                  24,
                  116,
                  101,
                  120,
                  116,
                  47,
                  112,
                  108,
                  97,
                  105,
                  110,
                  59,
                  99,
                  104,
                  97,
                  114,
                  115,
                  101,
                  116,
                  61,
                  117,
                  116,
                  102,
                  45,
                  56,
                  0,
                  58,
                  123,
                  34,
                  112,
                  34,
                  58,
                  34,
                  98,
                  114,
                  99,
                  45,
                  50,
                  48,
                  34,
                  44,
                  34,
                  111,
                  112,
                  34,
                  58,
                  34,
                  109,
                  105,
                  110,
                  116,
                  34,
                  44,
                  34,
                  116,
                  105,
                  99,
                  107,
                  34,
                  58,
                  34,
                  115,
                  97,
                  116,
                  115,
                  34,
                  44,
                  34,
                  97,
                  109,
                  116,
                  34,
                  58,
                  34,
                  49,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  34,
                  125,
                  104,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  192,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                ],
                "type": "Buffer",
              },
            ],
          },
        ],
        "locktime": 0,
        "outs": [
          {
            "script": {
              "data": [
                0,
                20,
                240,
                1,
                196,
                156,
                110,
                50,
                157,
                109,
                236,
                42,
                137,
                34,
                206,
                68,
                0,
                12,
                70,
                224,
                131,
                216,
              ],
              "type": "Buffer",
            },
            "value": 330,
          },
        ],
        "version": 2,
      }
    }
    transactionSummary={
      {
        "amount": 1540,
        "confirmed": false,
        "date": 2022-09-14T16:14:02.835Z,
        "height": undefined,
        "id": "053f320d8b9b77c521e8d9e8e7d90692e9c51a38c3d11010069e66b37b5f53d7",
        "offerData": [
          {
            "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
            "amount": 900,
            "contractId": undefined,
            "currency": undefined,
            "offerId": "123",
            "price": undefined,
          },
        ],
        "type": "DEPOSIT",
      }
    }
  />
  <Divider />
  <ConfirmationSummaryItem
    confirmed={false}
  />
  <TransactionETASummaryItem
    transaction={
      {
        "confirmationTime": BlockTime {
          "height": undefined,
          "timestamp": undefined,
        },
        "fee": 1540,
        "received": 330,
        "sent": 1870,
        "transaction": Transaction {
          "_bdk": undefined,
          "id": "",
          "serialize": [MockFunction],
        },
        "txid": "053f320d8b9b77c521e8d9e8e7d90692e9c51a38c3d11010069e66b37b5f53d7",
      }
    }
  />
  <Bubble
    color="primary"
    iconId="chevronsUp"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    increase network fee
  </Bubble>
  <Divider />
  <Bubble
    color="primary"
    ghost={true}
    iconId="externalLink"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    view in explorer
  </Bubble>
</View>
`;

exports[`TransactionDetailsInfo should render correctly for a pending transaction 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <Divider />
  <OutputInfo
    receivingAddress="receivingAddress"
    transactionDetails={
      Transaction {
        "ins": [
          {
            "hash": {
              "data": [
                33,
                202,
                70,
                220,
                213,
                105,
                233,
                30,
                251,
                143,
                137,
                245,
                202,
                244,
                79,
                184,
                211,
                5,
                214,
                178,
                126,
                218,
                87,
                212,
                226,
                192,
                204,
                68,
                253,
                54,
                42,
                4,
              ],
              "type": "Buffer",
            },
            "index": 16,
            "script": {
              "data": [],
              "type": "Buffer",
            },
            "sequence": 4261412863,
            "witness": [
              {
                "data": [
                  145,
                  125,
                  216,
                  186,
                  69,
                  210,
                  38,
                  176,
                  24,
                  69,
                  1,
                  163,
                  224,
                  74,
                  76,
                  116,
                  149,
                  107,
                  122,
                  81,
                  181,
                  234,
                  16,
                  54,
                  207,
                  64,
                  68,
                  195,
                  143,
                  193,
                  209,
                  65,
                  44,
                  102,
                  122,
                  239,
                  162,
                  184,
                  83,
                  67,
                  158,
                  82,
                  79,
                  241,
                  147,
                  102,
                  151,
                  126,
                  171,
                  215,
                  39,
                  35,
                  103,
                  165,
                  26,
                  143,
                  74,
                  140,
                  111,
                  106,
                  125,
                  107,
                  73,
                  172,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  32,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                  172,
                  0,
                  99,
                  3,
                  111,
                  114,
                  100,
                  1,
                  1,
                  24,
                  116,
                  101,
                  120,
                  116,
                  47,
                  112,
                  108,
                  97,
                  105,
                  110,
                  59,
                  99,
                  104,
                  97,
                  114,
                  115,
                  101,
                  116,
                  61,
                  117,
                  116,
                  102,
                  45,
                  56,
                  0,
                  58,
                  123,
                  34,
                  112,
                  34,
                  58,
                  34,
                  98,
                  114,
                  99,
                  45,
                  50,
                  48,
                  34,
                  44,
                  34,
                  111,
                  112,
                  34,
                  58,
                  34,
                  109,
                  105,
                  110,
                  116,
                  34,
                  44,
                  34,
                  116,
                  105,
                  99,
                  107,
                  34,
                  58,
                  34,
                  115,
                  97,
                  116,
                  115,
                  34,
                  44,
                  34,
                  97,
                  109,
                  116,
                  34,
                  58,
                  34,
                  49,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  48,
                  34,
                  125,
                  104,
                ],
                "type": "Buffer",
              },
              {
                "data": [
                  192,
                  206,
                  215,
                  158,
                  173,
                  240,
                  249,
                  211,
                  1,
                  212,
                  5,
                  60,
                  36,
                  77,
                  108,
                  83,
                  215,
                  181,
                  237,
                  120,
                  200,
                  155,
                  58,
                  3,
                  105,
                  231,
                  167,
                  130,
                  167,
                  121,
                  54,
                  25,
                  70,
                ],
                "type": "Buffer",
              },
            ],
          },
        ],
        "locktime": 0,
        "outs": [
          {
            "script": {
              "data": [
                0,
                20,
                240,
                1,
                196,
                156,
                110,
                50,
                157,
                109,
                236,
                42,
                137,
                34,
                206,
                68,
                0,
                12,
                70,
                224,
                131,
                216,
              ],
              "type": "Buffer",
            },
            "value": 330,
          },
        ],
        "version": 2,
      }
    }
    transactionSummary={
      {
        "amount": 1540,
        "confirmed": false,
        "date": 2022-09-14T16:14:02.835Z,
        "height": undefined,
        "id": "053f320d8b9b77c521e8d9e8e7d90692e9c51a38c3d11010069e66b37b5f53d7",
        "offerData": [
          {
            "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
            "amount": 900,
            "contractId": undefined,
            "currency": undefined,
            "offerId": "123",
            "price": undefined,
          },
        ],
        "type": "WITHDRAWAL",
      }
    }
  />
  <Divider />
  <ConfirmationSummaryItem
    confirmed={false}
  />
  <TransactionETASummaryItem
    transaction={
      {
        "confirmationTime": BlockTime {
          "height": undefined,
          "timestamp": undefined,
        },
        "fee": 1540,
        "received": 330,
        "sent": 1870,
        "transaction": Transaction {
          "_bdk": undefined,
          "id": "",
          "serialize": [MockFunction],
        },
        "txid": "053f320d8b9b77c521e8d9e8e7d90692e9c51a38c3d11010069e66b37b5f53d7",
      }
    }
  />
  <Bubble
    color="primary"
    iconId="chevronsUp"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    increase network fee
  </Bubble>
  <Divider />
  <Bubble
    color="primary"
    ghost={true}
    iconId="externalLink"
    iconSize={16}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    view in explorer
  </Bubble>
</View>
`;
